tests/baselines/reference/collisionSuperAndLocalVarInProperty.errors.txt
tests/cases/compiler/collisionSuperAndLocalVarInProperty.ts(13,17): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.


==== tests/cases/compiler/collisionSuperAndLocalVarInProperty.ts (1 errors) ====
    var _super = 10; // No Error
    class Foo {
       public prop1 = {
            doStuff: () => {
                var _super = 10; // No error
            }
        }
        public _super = 10; // No error
    }
    class b extends Foo {
        public prop2 = {
            doStuff: () => {
                var _super = 10; // Should be error 
                    ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
        }
        public _super = 10; // No error
    }